--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mysql2": "^3.15.3",
     "node-fetch": "^3.3.2",
     "npm": "^11.6.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
